# guess-the-number-cpp

./: CHANGELOG.md  CMakeLists.txt  README.md
include/: game.h
include/termcolor/: termcolor.hpp
src/: game.cpp  main.cpp
